# 153mingw

./: .gitignore  ARCHITECTURE.md  AUI  BUILD_NOTES.md  CMakeLists.txt  CPatcher.sln  DEBUG_PLAN.md  EvolvedPW.sln  LINUX_BUILD_PLAN.md  MISSING_IN_OUR_INTEGRATION.md  PROGRESS_NOTES.md  WINE_DEBUG_NOTES.md  build.sh  build_test.bat  build_test_multipart.bat  dlllog.txt  fix_case.sh  test_multipart_final.cpp
AFileDialog/: AFileDialog.h  AFileDialog.vcxproj  AFileDialog.vcxproj.filters  AFilePreviewWnd.h  AImagePreviewImpl.cpp  AListCtrl2.h  ARenderItem.h  CMakeLists.txt  CommonFileName.h  IAFileDialog.h  RenderWnd.cpp  RenderWnd.h
AUInterface/: A2DDotLine.cpp  A3DFTFont.cpp  A3DFTFont.h  A3DFTFontMan.cpp  A3DFTFontMan.h  AUICONSOLE.H  AUICUSTOMIZE.H  AUICheckBox.cpp  AUICheckbox.h  AUIComboBox.cpp  AUICommon.cpp  AUIConsole.cpp  AUIDialog.cpp  AUIDialog.h  AUIEditBox.cpp  AUIFRAME.H  AUIImagePicture.cpp  AUIImagepicture.h  AUIImeHook.cpp  AUILabel.cpp  AUIListBox.cpp  AUIListbox.h  AUILuaDialog.cpp  AUILuaDialog.h  AUIManager.cpp  AUIManager.h  AUIModelPicture.cpp  AUIObject.cpp  AUIPROGRESS.H  AUIProgress.cpp  AUISCROLL.H  AUISlider.cpp  AUIStillImageButton.cpp  AUITEXTAREA.H  AUITag.cpp  AUITag.h  AUITextArea.cpp  AUITreeView.cpp  AUIVERTICALTEXT.H  AUIWINDOWPICTURE.H  (+93 more)
Angelica3D/: Angelica3D.vcxproj  Angelica3D.vcxproj.filters  CMakeLists.txt
AngelicaCommon/: AngelicaCommon.vcxproj  AngelicaCommon.vcxproj.filters  CMakeLists.txt
AngelicaFile/: AngelicaFile.vcxproj  AngelicaFile.vcxproj.filters  CMakeLists.txt
AngelicaMedia/: AngelicaMedia.vcxproj  AngelicaMedia.vcxproj.filters  CMakeLists.txt
AudioAssist/: AudioAssist.vcxproj  AudioAssist.vcxproj.filters  CMakeLists.txt  DlgSelectEvent.cpp  DlgSelectEvent.h  DlgSelectReverb.cpp  EventDisplay.cpp
AudioEngine/: AudioEngine.vcxproj  AudioEngine.vcxproj.filters  CMakeLists.txt  FAudio.cpp  FAudio.h  FAudioBank.cpp  FAudioBankArchive.cpp  FAudioContainer.cpp  FAudioEngine.h  FAudioGroup.cpp  FAudioManager.cpp  FAudioTemplate.cpp  FEffect.cpp  FEvent.cpp  FEventGroup.cpp  FEventLayer.cpp  FEventManager.cpp  FEventParameter.cpp  FEventProject.cpp  FEventSystem.cpp  FEventSystem.h  FGuid.h  FLog.cpp  FLogManager.cpp  FPropCurves.cpp  FReverbDataManager.cpp  FSoundDef.cpp  FSoundDefArchive.cpp  FSoundDefManager.cpp  FSoundInstanceTemplate.cpp
AutoMoveImp/: AutoMoveImp.vcxproj  AutoMoveImp.vcxproj.filters  CMakeLists.txt  GAStar.cpp  GAStar.h  Island.cpp  MoveAgent.cpp  MoveAgent.h  MultiCluGraph.cpp  OptimizePath.cpp  OptimizePath.h  PfConstant.h  blockimage.h
CHBasedCD/: 2DObstruct.h  CHBasedCD.vcxproj  CHBasedCD.vcxproj.filters  CMakeLists.txt  GiftWrap.cpp  Matrix.cpp  Patch.h  aabbcd.cpp  aabbcd.h
ElementClient/: BBS_stubs.cpp  CECAstrolabeExpPill.cpp  CMakeLists.txt  DlgActivity.cpp  DlgAgreement.cpp  DlgArenaCountTime.cpp  DlgArenaCountTime.h  DlgArenaMessage.cpp  DlgArenaMessage.h  DlgArenaPoint.cpp  DlgArenaPoint.h  DlgArenaQueue.cpp  DlgArenaQueue.h  DlgArenaQueueChoose.cpp  DlgArenaQueueChoose.h  DlgArenaResult.cpp  DlgArenaResult.h  DlgArrangeTeam.cpp  DlgArrangeTeam.h  DlgAstrolabe.cpp  DlgAstrolabe.h  DlgAstrolabeIncPointValue.cpp  DlgAstrolabeIncPointValue.h  DlgAstrolabeRandomAddon.cpp  DlgAstrolabeRandomAddon.h  DlgAstrolabeSwallow.cpp  DlgAstrolabeSwallow.h  DlgAuctionBase.h  DlgAuctionSellList.cpp  DlgAutoAllRes.cpp  DlgAutoBaseLocalTex.cpp  DlgAutoBaseMountain2.cpp  DlgAutoBaseRoad.cpp  DlgAutoBaseTerrain.cpp  DlgAutoBaseWater.cpp  DlgAutoCamera.cpp  DlgAutoChooseTexture.cpp  DlgAutoCtrl.cpp  DlgAutoCtrlEditArea.cpp  DlgAutoGenLightMapProgress.cpp  (+376 more)
ElementSkill/: CMakeLists.txt  ElementSkill.cpp  ElementSkill.h  ElementSkill.vcxproj  ElementSkill.vcxproj.filters  skill.cpp  skill.h  skill10.h  skill100.h  skill101.h  skill104.h  skill105.h  skill106.h  skill107.h  skill1077.h  skill108.h  skill1080.h  skill1081.h  skill1082.h  skill1083.h  skill1086.h  skill1094.h  skill1095.h  skill1096.h  skill1098.h  skill1099.h  skill11.h  skill1100.h  skill1101.h  skill1102.h  skill1103.h  skill1104.h  skill1105.h  skill1106.h  skill1107.h  skill111.h  skill1112.h  skill1113.h  skill1114.h  skill1115.h  (+878 more)
FREETYPE-2.1.10/: CMakeLists.txt
FTDriver/: CMakeLists.txt  FTDriver.vcxproj  FTDriverDLL.cpp  FTFont.cpp  FTInterface.h  StdAfx.h  WTFont.inl
FWEditor/: CMakeLists.txt  CharOutline.h  FWAlgorithm.cpp  FWArchive.h  FWArray.h  FWArtArc.cpp  FWArtCreator.cpp  FWArtDoubleArc.cpp  FWArtStepScale.cpp  FWArtTilt.cpp  FWArtWave.cpp  FWAssemblyCache.cpp  FWAssemblyCache.h  FWAssemblyProfile.cpp  FWAssemblySet.cpp  FWDialogEdit.cpp  FWDialogParam.cpp  FWDialogText.cpp  FWDialogTool.cpp  FWEditor.vcxproj  FWEditor.vcxproj.filters  FWFlatCollector.cpp  FWFlatCollector.h  FWFontEnum.cpp  FWFormula.cpp  FWGlyphList.cpp  FWGlyphList.h  FWGlyphPolygon.cpp  FWGlyphText.cpp  FWInfoSet.h  FWModifierCreator.cpp  FWModifierParabola.cpp  FWModifierRing.cpp  FWState.cpp  FWStateMove.cpp  FWStateSelect.cpp  FWTemplate.cpp  FWTextMesh.h  FWView.cpp  GLUTess.h
GfxCommon/: A3DCombActMan.h  A3DCombinedAction.h  A3DGFXAnimable.h  A3DGFXCachedItemMan.h  A3DGFXContainer.cpp  A3DGFXECMLoader.cpp  A3DGFXECMLoader.h  A3DGFXECModel.cpp  A3DGFXEditorInterface.h  A3DGFXElement.cpp  A3DGFXEx.cpp  A3DGFXEx.h  A3DGFXExMan.cpp  A3DGFXExMan.h  A3DGFXInterface.cpp  A3DGFXInterface.h  A3DGFXKeyPoint.cpp  A3DGFXKeyPoint.h  A3DGFXModel.cpp  A3DGFXPIFuncs.cpp  A3DGFXPhysDataMan.h  A3DGFXRenderSlot.cpp  A3DGFXShakeCamera.h  A3DGFXSoundImp.cpp  A3DGFXStreamMan.cpp  A3DGFXStreamMan.h  A3DGFXSurfaceRender.cpp  A3DGfxECMInterface.h  A3DGfxExMan.h  A3DMultiPlaneEmitter.h  A3DParaboloid.cpp  A3DParticleEmitter.h  A3DParticleSystemEx.cpp  A3DParticleSystemEx.h  A3DPhysFluidSyncData.h  A3DPhysRBCreator.cpp  A3DRibbon.cpp  A3DSkillGfxEvent.cpp  CMakeLists.txt  EC_Model.cpp  (+83 more)
ImageCacheLib/: CMakeLists.txt  ICLImg.h  ICLImgImplDDS.cpp  ICLImgImplDDS.h  ICLImgImplECM.cpp  ICLImgImplGfx.cpp  ICLNotifier.h  ImageCacheLib.vcxproj  ImageCacheLib.vcxproj.filters  PlatformIndependFuncs.cpp
ImmWrapper/: CMakeLists.txt  ImmWrapper.vcxproj  ImmWrapper.vcxproj.filters
(+1316 files in other folders)
