# Angelica3D - Direct3D 9 rendering engine
add_library(Angelica3D STATIC
    Source/A2DSprite.cpp
    Source/A2DSpriteBuffer.cpp
    Source/A2DSpriteItem.cpp
    Source/A2DSpriteTexMan.cpp
    Source/A2DSpriteTextures.cpp
    Source/A3DAbsTrackMaker.cpp
    Source/A3DAdditionalView.cpp
    Source/A3DBSP.cpp
    Source/A3DBezierPoint.cpp
    Source/A3DBezierSegment.cpp
    Source/A3DBillBoard.cpp
    Source/A3DBone.cpp
    Source/A3DBoneController.cpp
    Source/A3DCamera.cpp
    Source/A3DCameraBase.cpp
    Source/A3DClothMesh.cpp
    Source/A3DCollision.cpp
    Source/A3DConfig.cpp
    Source/A3DControl.cpp
    Source/A3DController.cpp
    Source/A3DCoordinate.cpp
    Source/A3DCubeTexture.cpp
    Source/A3DCursor.cpp
    Source/A3DDecal.cpp
    Source/A3DDevice.cpp
    Source/A3DESP.cpp
    Source/A3DESPMove.cpp
    Source/A3DEngine.cpp
    Source/A3DFlash.cpp
    Source/A3DFlatCollector.cpp
    Source/A3DFont.cpp
    Source/A3DFontMan.cpp
    Source/A3DFrame.cpp
    Source/A3DFrustum.cpp
    Source/A3DFuncs.cpp
    Source/A3DGDI.cpp
    Source/A3DGFXCollector.cpp
    Source/A3DGFXMan.cpp
    Source/A3DGeometry.cpp
    Source/A3DGraphicsFX.cpp
    Source/A3DHermiteSpline.cpp
    Source/A3DHorizonCull.cpp
    Source/A3DIBLMesh.cpp
    Source/A3DIBLScene.cpp
    Source/A3DIKData.cpp
    Source/A3DIKSolver.cpp
    Source/A3DImgModel.cpp
    Source/A3DImgModelMan.cpp
    Source/A3DJoint.cpp
    Source/A3DKDTree.cpp
    Source/A3DLamp.cpp
    Source/A3DLensFlare.cpp
    Source/A3DLight.cpp
    Source/A3DLightMan.cpp
    Source/A3DLightingEngine.cpp
    Source/A3DLightning.cpp
    Source/A3DLitModel.cpp
    Source/A3DLitModelRender.cpp
    Source/A3DMaterial.cpp
    Source/A3DMathUtility.cpp
    Source/A3DMatrix.cpp
    Source/A3DMesh.cpp
    Source/A3DMeshBase.cpp
    Source/A3DMeshCollector.cpp
    Source/A3DMeshMan.cpp
    Source/A3DMeshSorter.cpp
    Source/A3DModel.cpp
    Source/A3DModelCollector.cpp
    Source/A3DModelMan.cpp
    Source/A3DMorphMesh.cpp
    Source/A3DMorphRigidMesh.cpp
    Source/A3DMorphSkinMesh.cpp
    Source/A3DMoxMan.cpp
    Source/A3DMuscleMesh.cpp
    Source/A3DMuscleOrgan.cpp
    Source/A3DOrthoCamera.cpp
    Source/A3DPArray.cpp
    Source/A3DPI.cpp
    Source/A3DParticleSystem.cpp
    Source/A3DPerlinNormalMap.cpp
    Source/A3DPixelShader.cpp
    Source/A3DPlants.cpp
    Source/A3DPortal.cpp
    Source/A3DQuaternion.cpp
    Source/A3DRain.cpp
    Source/A3DRenderTarget.cpp
    Source/A3DRigidMesh.cpp
    Source/A3DRouteVSS.cpp
    Source/A3DScene.cpp
    Source/A3DSceneHull.cpp
    Source/A3DShader.cpp
    Source/A3DShaderMan.cpp
    Source/A3DShadowMap.cpp
    Source/A3DSkeleton.cpp
    Source/A3DSkin.cpp
    Source/A3DSkinMan.cpp
    Source/A3DSkinMesh.cpp
    Source/A3DSkinMeshMan.cpp
    Source/A3DSkinModel.cpp
    Source/A3DSkinModelAct.cpp
    Source/A3DSkinModelAux.cpp
    Source/A3DSkinModelMan.cpp
    Source/A3DSky.cpp
    Source/A3DSkyBox.cpp
    Source/A3DSkyGradient.cpp
    Source/A3DSkySphere.cpp
    Source/A3DSnow.cpp
    Source/A3DStars.cpp
    Source/A3DStream.cpp
    Source/A3DString.cpp
    Source/A3DStringSet.cpp
    Source/A3DSuperDecal.cpp
    Source/A3DSuperSpray.cpp
    Source/A3DSuppleMesh.cpp
    Source/A3DSurface.cpp
    Source/A3DSurfaceMan.cpp
    Source/A3DTerrain.cpp
    Source/A3DTerrain2.cpp
    Source/A3DTerrain2Blk.cpp
    Source/A3DTerrain2CullHC.cpp
    Source/A3DTerrain2Env.cpp
    Source/A3DTerrain2LOD.cpp
    Source/A3DTerrain2Loader.cpp
    Source/A3DTerrain2LoaderA.cpp
    Source/A3DTerrain2LoaderB.cpp
    Source/A3DTerrain2Render.cpp
    Source/A3DTerrain2RenderAux.cpp
    Source/A3DTerrain2Trace.cpp
    Source/A3DTerrainMark.cpp
    Source/A3DTerrainOutline.cpp
    Source/A3DTerrainWater.cpp
    Source/A3DTerrainWaterRender.cpp
    Source/A3DTerrainWaterSimpleAlphaRender.cpp
    Source/A3DTexture.cpp
    Source/A3DTextureMan.cpp
    Source/A3DTrace.cpp
    Source/A3DTrackMan.cpp
    Source/A3DVSSRouteLoader.cpp
    Source/A3DVectorComp.cpp
    Source/A3DVertexCollector.cpp
    Source/A3DVertexShader.cpp
    Source/A3DViewport.cpp
    Source/A3DWaterArea.cpp
    Source/A3DWaterWave.cpp
    Source/A3DWireCollector.cpp
    Source/A3DWorld.cpp
    Source/A3DWorldCDS.cpp
    Source/a3dskinrender.cpp
)

target_include_directories(Angelica3D PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/header
)

target_link_libraries(Angelica3D PUBLIC
    AngelicaCommon
    AngelicaFile
    AngelicaMedia
    d3d9
    d3dx9_43
    ddraw
    dxguid
)

target_compile_definitions(Angelica3D PRIVATE WIN32 UNICODE _UNICODE DX9)
