# Lua 5.1 library
add_library(lua51 STATIC
    lapi.c
    lauxlib.c
    lbaselib.c
    lcode.c
    ldblib.c
    ldebug.c
    ldo.c
    ldump.c
    lfunc.c
    lgc.c
    linit.c
    liolib.c
    llex.c
    lmathlib.c
    lmem.c
    loadlib.c
    lobject.c
    lopcodes.c
    loslib.c
    lparser.c
    lstate.c
    lstring.c
    lstrlib.c
    ltable.c
    ltablib.c
    ltm.c
    lundump.c
    lvm.c
    lzio.c
)

target_include_directories(lua51 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(lua51 PRIVATE WIN32 LUA_BUILD_AS_DLL)
